test/library/standard/Sort/errors/sortDomainArray.sparse6.good
sortDomainArray.chpl:38: error: sorted() is currently only supported on associative domains
